--- a/carousal/slider.css
+++ b/carousal/slider.css
@@ -1,22 +1,17 @@
 .carousel_img {display:none;
- height:300px;
-width:400px;
+width:100%;
+
  }
-#slider{margin:30px;
-width:400px;
+#slider{
+width:100%;
 height:300px;
 overflow:hidden;
 margin-left:auto;
 margin-right:auto;
 }
-.wrapper{
-margin:30px;
-width:400px;
-height:300px;
+.wrap{
+margin-top:0px;
 margin-left:auto;
 margin-right:auto;
 }
-
-div.main-nav >a{text-decoration:none;float:left;padding:20px;}
-div.main-nav {margin-right:auto;margin-left:auto;width:300px;height:50px;}
 
