--- a/dnb.css
+++ b/dnb.css
@@ -118,6 +118,7 @@ margin-top: 5px;
 .container{
     box-shadow: 0px -2px 4px #aaa,-2px -2px 4px #aaa;
     background-color: #fff;
+    min-height: 100%;
 }
 
 body{
